--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
         <title>Site</title>
         <meta charset="UTF-8">
         <link href="css/style.css" type="text/css" rel="stylesheet">
+        <link href="test.css" rel="stylesheet" media="only screen and (max-width:480px)" />
     </head>
     <body>
     <div class="menu">
-        <div class="row-menu" contenteditable><a class="content-row-menu" href=""> About me </a></div>
-        <div class="row-menu" contenteditable><a class="content-row-menu" href=""> Tell me </a></div>
-        <div class="row-menu" contenteditable><a class="content-row-menu" href=""> Send me </a></div>
-        <div class="row-menu" contenteditable><a class="content-row-menu" href=""> Fuck off me </a></div>
+        <div class="row-menu" contenteditable>
+            <a class="content-row-menu" href="">About me</a>
+        </div>
+        <div class="row-menu" contenteditable>
+            <a class="content-row-menu" href="">Tell me</a>
+        </div>
+        <div class="row-menu" contenteditable>
+            <a class="content-row-menu" href="">Send me</a>
+        </div>
+        <div class="row-menu" contenteditable>
+            <a class="content-row-menu" href="">Fuck off</a>
+        </div>
     </div>
     </body>
 </html>
