create steel about page

--- a/about.html
+++ b/about.html
@@ -3,24 +3,39 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>About Me</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="css/about.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
 </head>
 <body>
-<div class="page-about">
-    <div class="content">
-        <div class="back-nav"><-</div>
-        <div class="header">
-            <div class="user-name">
-                Killi Milli
+<div class="navbar user-navbar">
+    <div class="title col-md-2 pull-left">About Me</div>
+    <div class="menu col-md-offset-9 col-md-1 pull-right"><i class="fa fa-bars fa-3x fa-inverse"></i></div>
+</div>
+<div class="user-page container">
+    <div class="row">
+        <div class="user-photo col-md-2 col-md-offset-2">
+            <img class="img-responsive display-inline-block" src="images/user-photo.jpg" >
+        </div>
+        <div class="user-info col-md-6 col-md-offset-1 ">
+            <div class="user-name">Milli Killi</div>
+            <div class="user-status">UI Developer</div>
+            <div class="user-location">Minsk</div>
+            <div class="row">
+                <div class="user-vita-title col-md-4">
+                    About me:
+                </div>
+            </div>
+            <div class="row">
+                <div class="user-vita col-md-12">
+                    sdfasdfasdasdsdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddfddddddddddddddddddddddddddddddddddddddddd
+                </div>
             </div>
         </div>
-        <div class="user-photo-box">
-            <img class="user-photo" src="images/user-photo.jpg">
-        </div>
-        <div class="user-description">
-            Description Killi Millidfsdfsfdddddddddddddddddddddddddddddddddddddddddd
-        </div>
     </div>
+
 </div>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
